Changed header color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header {
     text-align: center;
-    background-color: #3f3f3f;
+    background-color: deepskyblue;
     color: white;
     padding: 10px;
 }
